# MASContribution

./: .gitignore  Makefile  README.md  README_EXPERIMENTS.md  SUBMISSION_SUMMARY.md  main.tex  pyproject.toml  references.bib  references.tex  related_work_section_zh.tex  requirements.txt  完整系统性能与成本实验结果.docx
configs/: base_experiment.yaml
configs/benchmark_specs/agents/: aggregator.yaml  coder.yaml  critic.yaml  debugger.yaml  executor.yaml  finalizer.yaml  memory_manager.yaml  planner.yaml  researcher.yaml  retriever.yaml  reviewer.yaml  supervisor.yaml  tester.yaml  tool_agent.yaml  verifier.yaml
configs/benchmark_specs/architectures/: A1_pev.yaml  A2_chain.yaml  A3_dag.yaml  A4_metagpt_lite.yaml  A5_star.yaml  A6_debate.yaml  A7_graph.yaml
configs/benchmark_specs/permissions/: permission_sets.yaml
configs/benchmark_specs/prompts/: coder.md  critic.md  debugger.md  finalizer.md  memory_manager.md  (+5 more)
configs/experiments/: exp01_full_system.yaml  exp02_single_agent_baseline.yaml  exp03_loo_attribution.yaml  exp04_shapley_attribution.yaml  exp05_topology_intervention.yaml  exp06_role_intervention.yaml  exp07_permission_intervention.yaml  exp08_generalization.yaml  exp09_contribution_predictor.yaml
docs/: benchmark_protocol.md  data_schema.md  experiment_plan.md
results/: full_system_performance.csv  full_system_performance.json  full_system_performance_table.tex
scripts/: aggregate_results.py  build_task_metadata.py  make_figures.py  make_tables.py  prepare_data.py  run_experiment.py  run_full_system_experiment.py
src/mas_contribution_bench/: __init__.py
(+40 files in other folders)
